add stichting dierenlot to page

--- a/index.html
+++ b/index.html
@@ -614,14 +614,22 @@
               <p><a href="https://www.kattenren.com/">Meer over Kattenren</a></p>
             </div>
           </div>
+
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-              <div class="h-entry">
-                <img src="images/prins.png" alt="Image" class="img-fluid">
-                <h2 class="font-size-regular"><a href="https://www.prinspetfoods.nl/">Prins</a></h2>
-                <p>Wil jij ook het beste voor je kat of hond? Wij raden Prins Pet Foods aan!</p>
-                <p><a href="https://www.prinspetfoods.nl/">Meer over Prins Pet Foods</a></p>
-              </div>
+            <div class="h-entry">
+              <img src="images/prins.png" alt="Image" class="img-fluid">
+              <h2 class="font-size-regular"><a href="https://www.prinspetfoods.nl/">Prins</a></h2>
+              <p>Wil jij ook het beste voor je kat of hond? Wij raden Prins Pet Foods aan!</p>
+              <p><a href="https://www.prinspetfoods.nl/">Meer over Prins Pet Foods</a></p>
             </div>
+          </div><div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+          <div class="h-entry">
+            <img src="images/dierenlot.png" alt="Image" class="img-fluid">
+            <h2 class="font-size-regular"><a href="https://www.dier.nu/">Stichting DierenLot</a></h2>
+            <p>Stichting DierenLot stopt de mishandeling en verwaarlozing van dieren. Stichting Poezenbende is erkend beneficiant bij Stichting DierenLot.</p>
+            <p><a href="https://www.dier.nu/">Meer over Stichting DierenLot</a></p>
+          </div>
+        </div>
         </div>
 
       </div>
