add financeel overzicht 2019

--- a/index.html
+++ b/index.html
@@ -538,6 +538,16 @@
             <div class="unit-4 d-flex">
               <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>
               <div>
+                <h3>Financieel Overzicht 2019</h3>
+                <p>Download hieronder het financieel overzicht van 2019</p>
+                <p><a href="finances/FinancieelOverzicht2019.pdf">Download</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+            <div class="unit-4 d-flex">
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>
+              <div>
                 <h3>Financieel Overzicht 2018</h3>
                 <p>Download hieronder het financieel overzicht van 2018</p>
                 <p><a href="finances/FinancieelOverzicht2018.pdf">Download</a></p>
