add 2021 notification to homepage

--- a/index.html
+++ b/index.html
@@ -127,6 +127,45 @@
       </div>
     </div>
 
+    <section class="site-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-12">
+            <h3 class="section-sub-title">Belangrijk !</h3>
+            <h2 class="section-title mb-3">Mededeling voor seizoen 2021</h2>
+            <div class="col-12 mb-4">
+              <p class="lead">Helaas moeten we aankomend seizoen onze keuzes en werkwijze een beetje aanpassen.
+                Vanwege diverse redenen zijn wij genoodzaakt dit seizoen onze focus te leggen op onze groep permanente bewoners, de (chronisch) zieke katten en hulbehoevende katten die op dit moment erg veel tijd en extra verzorging nodig hebben.
+              </p><p class="lead">
+              Daarbij gaat er veel tijd zitten in het volgen van een opleiding waarvan de papieren noodzakelijk zijn voor onze stichting. Om aan alle criteria te voldoen willen we graag de benodigde diploma's hiervoor halen. Deze opleiding valt helaas midden in het hoogseizoen.
+              Start in Mei en eindight hopelijk in September.
+              Hier moeten we tijd en ruimte voor vrijmaken om dit mogelijk te maken. Tijd die we normaal gezien toch al zo vaak tekort komen. Helaas zit in onze dagen ook slechts 24 uur en moeten we dus keuzes maken.
+            </p><p class="lead">
+
+            Ook is er financieel momenteel niet de mogelijkheid om nieuwe katten op te vangen en te voorzien van alle medische hulp en behandelingen.
+          </p><p class="lead">
+
+          Volgend jaar willen we graag onze werkzaamheden weer hervatten zoals voorheen. Maar voor aankomend seizoen betekent dit helaas dat we geen nieuwe katten en/of kittens kunnen opvangen.
+        </p><p class="lead">
+
+        Sorry!
+      </p><p class="lead">
+
+      Voor ons is dit een hele moeilijke beslissing die we niet genomen hadden als er andere mogelijkheden waren geweest.
+    </p><p class="lead">
+
+    Wij open op uw begrip.
+  </p><p class="lead">
+
+  Vriendelijke groet,
+</p><p class="lead">
+
+Stichting Poezenbende.</p>
+            </div>
+          </div>
+        </div>
+    </section>
+
 
     <div class="site-section" id="facebook-section">
       <div class="container">
