--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 Vanwege diverse redenen zijn wij genoodzaakt dit seizoen onze focus te leggen op onze groep permanente bewoners, de (chronisch) zieke katten en hulbehoevende katten die op dit moment erg veel tijd en extra verzorging nodig hebben.
               </p><p class="lead">
               Daarbij gaat er veel tijd zitten in het volgen van een opleiding waarvan de papieren noodzakelijk zijn voor onze stichting. Om aan alle criteria te voldoen willen we graag de benodigde diploma's hiervoor halen. Deze opleiding valt helaas midden in het hoogseizoen.
-              Start in Mei en eindight hopelijk in September.
+              Start in Mei en eindigt hopelijk in September.
               Hier moeten we tijd en ruimte voor vrijmaken om dit mogelijk te maken. Tijd die we normaal gezien toch al zo vaak tekort komen. Helaas zit in onze dagen ook slechts 24 uur en moeten we dus keuzes maken.
             </p><p class="lead">
 
