--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h2 class="section-title mb-3">Mededeling voor seizoen 2021</h2>
             <div class="col-12 mb-4">
               <p class="lead">Helaas moeten we aankomend seizoen onze keuzes en werkwijze een beetje aanpassen.
-                Vanwege diverse redenen zijn wij genoodzaakt dit seizoen onze focus te leggen op onze groep permanente bewoners, de (chronisch) zieke katten en hulbehoevende katten die op dit moment erg veel tijd en extra verzorging nodig hebben.
+                Vanwege diverse redenen zijn wij genoodzaakt dit seizoen onze focus te leggen op onze groep permanente bewoners, de (chronisch) zieke katten en hulpbehoevende katten die op dit moment erg veel tijd en extra verzorging nodig hebben.
               </p><p class="lead">
               Daarbij gaat er veel tijd zitten in het volgen van een opleiding waarvan de papieren noodzakelijk zijn voor onze stichting. Om aan alle criteria te voldoen willen we graag de benodigde diploma's hiervoor halen. Deze opleiding valt helaas midden in het hoogseizoen.
               Start in Mei en eindigt hopelijk in September.
