--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       Voor ons is dit een hele moeilijke beslissing die we niet genomen hadden als er andere mogelijkheden waren geweest.
     </p><p class="lead">
 
-    Wij open op uw begrip.
+    Wij hopen op uw begrip.
   </p><p class="lead">
 
   Vriendelijke groet,
