--- a/index.html
+++ b/index.html
@@ -572,6 +572,16 @@ Stichting Poezenbende.</p>
             RSIN (rechtspersonen, en samenwerkingsverbanden informatie nummer) : 855471499</p>
           </div>
         </div>
+        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+          <div class="unit-4 d-flex">
+            <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>
+            <div>
+              <h3>Jaarverslag 2020</h3>
+              <p>Download hieronder het jaarverslag van 2020</p>
+              <p><a href="finances/Jaarverslag2020.pdf">Download</a></p>
+            </div>
+          </div>
+        </div>
         <div class="row align-items-stretch">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-flex">
