Add new partners

--- a/index.html
+++ b/index.html
@@ -967,6 +967,36 @@
                 </p>
               </div>
             </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+              <div class="h-entry">
+                <img src="images/husse.jpeg" alt="Image" class="img-fluid" />
+                <h2 class="font-size-regular">
+                  <a href="https://netherlands.husse.com/">Husse</a>
+                </h2>
+                <p>
+                  Bij Stiching Poezenbende maken we gebruik van kwaliteitsvoer
+                  voor onze dieren. Wij raden Husse aan!
+                </p>
+                <p>
+                  <a href="https://netherlands.husse.com/">Meer over Husse</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+              <div class="h-entry">
+                <img src="images/petrebels.png" alt="Image" class="img-fluid" />
+                <h2 class="font-size-regular">
+                  <a href="https://www.petrebels.com">Petrebels</a>
+                </h2>
+                <p>
+                  Bij Petrebels is de kat koning. Jij wil toch ook een perfecte
+                  krabpaal voor jouw kat? Petrebels is dan de place to be.
+                </p>
+                <p>
+                  <a href="https://www.petrebels.com">Meer over Petrebels</a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
