--- a/index.html
+++ b/index.html
@@ -357,6 +357,25 @@
               />
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-md-6 col-lg-8">
+              <div class="box-with-humber">
+                <h2 class="text-black">Wij zijn gecertificeerd voor het houden van dieren!</h2>
+                <p class="mb-4">
+                  Stichting Poezenbende is gecertificeerd voor het houden van dieren, honden en kattenbesluit, aan het Aeres college te Barneveld.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <img
+                src="images/aeres.png"
+                alt="Image"
+                class="img-fluid rounded"
+              />
+            </div>
+          </div>
         </div>
       </section>
 
