--- a/index.html
+++ b/index.html
@@ -361,9 +361,13 @@
           <div class="row">
             <div class="col-md-6 col-lg-8">
               <div class="box-with-humber">
-                <h2 class="text-black">Wij zijn gecertificeerd voor het houden van dieren!</h2>
+                <h2 class="text-black">
+                  Wij zijn gecertificeerd voor het houden van dieren!
+                </h2>
                 <p class="mb-4">
-                  Stichting Poezenbende is gecertificeerd voor het houden van dieren, honden en kattenbesluit, aan het Aeres college te Barneveld.
+                  Stichting Poezenbende is gecertificeerd voor het houden van
+                  dieren, honden en kattenbesluit, aan het Aeres college te
+                  Barneveld.
                 </p>
               </div>
             </div>
@@ -762,35 +766,37 @@
               </p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4">
-                <span class="text-primary icon-business_center"></span>
+          <div class="row align-items-stretch">
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Jaarverslag 2021</h3>
+                  <p>Download hieronder het jaarverslag van 2021</p>
+                  <p><a href="finances/Jaarverslag2021.pdf">Download</a></p>
+                </div>
               </div>
-              <div>
-                <h3>Jaarverslag 2021</h3>
-                <p>Download hieronder het jaarverslag van 2021</p>
-                <p><a href="finances/Jaarverslag2021.pdf">Download</a></p>
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Jaarverslag 2020</h3>
+                  <p>Download hieronder het jaarverslag van 2020</p>
+                  <p><a href="finances/Jaarverslag2020.pdf">Download</a></p>
+                </div>
               </div>
-            </div>
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4">
-                <span class="text-primary icon-business_center"></span>
-              </div>
-              <div>
-                <h3>Jaarverslag 2020</h3>
-                <p>Download hieronder het jaarverslag van 2020</p>
-                <p><a href="finances/Jaarverslag2020.pdf">Download</a></p>
-              </div>
-            </div>
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4">
-                <span class="text-primary icon-business_center"></span>
-              </div>
-              <div>
-                <h3>Jaarverslag 2019</h3>
-                <p>Download hieronder het jaarverslag van 2019</p>
-                <p><a href="finances/Jaarverslag2019.pdf">Download</a></p>
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Jaarverslag 2019</h3>
+                  <p>Download hieronder het jaarverslag van 2019</p>
+                  <p><a href="finances/Jaarverslag2019.pdf">Download</a></p>
+                </div>
               </div>
             </div>
           </div>
