--- a/index.html
+++ b/index.html
@@ -766,6 +766,7 @@
               </p>
             </div>
           </div>
+
           <div class="row align-items-stretch">
             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4 d-flex">
@@ -778,6 +779,8 @@
                   <p><a href="finances/Jaarverslag2021.pdf">Download</a></p>
                 </div>
               </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4 d-flex">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary icon-business_center"></span>
@@ -785,9 +788,11 @@
                 <div>
                   <h3>Jaarverslag 2020</h3>
                   <p>Download hieronder het jaarverslag van 2020</p>
-                  <p><a href="finances/Jaarverslag2020.pdf">Download</a></p>
+                  <p><a href="finances/Jaarverslag2021.pdf">Download</a></p>
                 </div>
               </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4 d-flex">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary icon-business_center"></span>
@@ -799,8 +804,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row align-items-stretch">
             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4 d-flex">
                 <div class="unit-4-icon mr-4">
