add extra important message

--- a/index.html
+++ b/index.html
@@ -177,12 +177,36 @@
           </div>
         </div>
       </div>
+      <section class="site-section">
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12">
+              <h3 class="section-sub-title">Belangrijk!</h3>
+              <h2 class="section-title mb-3">Wijziging Openingstijden</h2>
+              <div class="col-12 mb-4">
+                <p class="lead">
+                  anaf 1 Juni zijn wij nog 4 dagen per week bereikbaar in plaats
+                  van 7. Namelijk op maandag, dinsdag, donderdag en vrijdag. Van
+                  9u s'ochtends tot 21u s'avonds.
+                </p>
+                <p class="lead">
+                  Zowel telefonisch, als voor mailtjes, pb's of reacties op
+                  Facebook. Voor noodgevallen in de omgeving Eindhoven kunt u
+                  contact opnemen met Stichting Roze (040-7470100).
+                </p>
+                <p class="lead">Vriendelijke groet,</p>
+                <p class="lead">Stichting Poezenbende.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="site-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12">
-              <h3 class="section-sub-title">Belangrijk !</h3>
+              <h3 class="section-sub-title">Belangrijk!</h3>
               <h2 class="section-title mb-3">Mededeling voor seizoen 2022</h2>
               <div class="col-12 mb-4">
                 <p class="lead">
