--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <h2 class="section-title mb-3">Wijziging Openingstijden</h2>
               <div class="col-12 mb-4">
                 <p class="lead">
-                  anaf 1 Juni zijn wij nog 4 dagen per week bereikbaar in plaats
+                  Vanaf 1 Juni zijn wij nog 4 dagen per week bereikbaar in plaats
                   van 7. Namelijk op maandag, dinsdag, donderdag en vrijdag. Van
                   9u s'ochtends tot 21u s'avonds.
                 </p>
@@ -798,6 +798,18 @@
                   <span class="text-primary icon-business_center"></span>
                 </div>
                 <div>
+                  <h3>Jaarverslag 2022</h3>
+                  <p>Download hieronder het jaarverslag van 2022</p>
+                  <p><a href="finances/Jaarverslag2022.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
                   <h3>Jaarverslag 2021</h3>
                   <p>Download hieronder het jaarverslag van 2021</p>
                   <p><a href="finances/Jaarverslag2021.pdf">Download</a></p>
@@ -825,6 +837,20 @@
                   <h3>Jaarverslag 2019</h3>
                   <p>Download hieronder het jaarverslag van 2019</p>
                   <p><a href="finances/Jaarverslag2019.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Financieel Overzicht 2022</h3>
+                  <p>Download hieronder het financieel overzicht van 2022</p>
+                  <p>
+                    <a href="finances/FinancieelOverzicht2022.pdf">Download</a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -1019,21 +1045,6 @@
                 </p>
                 <p>
                   <a href="https://netherlands.husse.com/">Meer over Husse</a>
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-              <div class="h-entry">
-                <img src="images/petrebels.png" alt="Image" class="img-fluid" />
-                <h2 class="font-size-regular">
-                  <a href="https://www.petrebels.com">Petrebels</a>
-                </h2>
-                <p>
-                  Bij Petrebels is de kat koning. Jij wil toch ook een perfecte
-                  krabpaal voor jouw kat? Petrebels is dan de place to be.
-                </p>
-                <p>
-                  <a href="https://www.petrebels.com">Meer over Petrebels</a>
                 </p>
               </div>
             </div>
