--- a/index.html
+++ b/index.html
@@ -207,21 +207,8 @@
           <div class="row mb-5">
             <div class="col-12">
               <h3 class="section-sub-title">Belangrijk!</h3>
-              <h2 class="section-title mb-3">Mededeling voor seizoen 2022</h2>
+              <h2 class="section-title mb-3">Maakt u samen met ons het verschil voor zwerfkatten?</h2>
               <div class="col-12 mb-4">
-                <p class="lead">
-                  Afgelopen jaar hebben we zoals eerder aangegeven wat minder
-                  nieuwe katten op kunnen vangen. Voor 2022 willen we dit wel
-                  weer heel graag op gaan pakken.
-                </p>
-                <p class="lead">
-                  Daarvoor kunnen we uw hulp goed gebruiken! We zijn dringend op
-                  zoek naar gastgezinnen die ons daarbij gaan ondersteunen. Met
-                  ons kleine team zullen we wellicht niet alle meldingen kunnen
-                  aannemen. Dit vinden wij ook erg treurig. Maar we gaan onze
-                  uiterste best doen om zoveel mogelijk katten te helpen of mee
-                  te zoeken naar oplossingen.
-                </p>
                 <p class="lead">
                   Lijkt het u leuk om zwerfkatten en kittens te helpen naar een
                   betere toekomst.. om ze voor te bereiden en te socialiseren
