Fix Facebook URL.

--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
                 </div>
                 <div class="col-md-3">
                   <h2 class="footer-heading mb-4">Volg ons!</h2>
-                  <a href="#" class="pl-0 pr-3"
+                  <a href="https://www.facebook.com/profile.php?id=100069735264663" target="_blank" class="pl-0 pr-3"
                     ><span class="icon-facebook"></span
                   ></a>
                 </div>
