--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             <div class="col-12 mb-4">
               <p class="lead">
                 Onder leiding van Penningmeester J.C van de Molengraaf,
-                Secretaris M. V. Beers en Voorzitter N.J.G Franken wordt
+                Secretaris R. F. C Holle- Koelemans en Voorzitter N.J.G Franken wordt
                 Stichting Poezenbende gerund. Hieronder zijn alle jaarlijkse
                 financiele overzichten te vinden. <br /><br />
                 KvK nummer: 63965658 <br />
