Add new beleidsplan

--- a/index.html
+++ b/index.html
@@ -971,6 +971,21 @@
                   <span class="text-primary icon-business_center"></span>
                 </div>
                 <div>
+                  <h3>Vernieuwde Statuten & Beleidsplan (2024)</h3>
+                  <p>
+                    Download hieronder de vernieuwde statuten & het beleidsplan van
+                    Stichting Poezenbende
+                  </p>
+                  <p><a href="finances/Beleidsplan2024.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
                   <h3>Statuten & Beleidsplan</h3>
                   <p>
                     Download hieronder de statuten & het beleidsplan van
