Change statuten & beleidsplan documents

--- a/index.html
+++ b/index.html
@@ -971,12 +971,11 @@
                   <span class="text-primary icon-business_center"></span>
                 </div>
                 <div>
-                  <h3>Vernieuwde Statuten & Beleidsplan (2024)</h3>
+                  <h3>Vernieuwde statuten(2024)</h3>
                   <p>
-                    Download hieronder de vernieuwde statuten & het beleidsplan van
-                    Stichting Poezenbende
+                    Download hieronder de vernieuwde statuten van Stichting Poezenbende
                   </p>
-                  <p><a href="finances/Beleidsplan2024.pdf">Download</a></p>
+                  <p><a href="finances/Statuten2024.pdf">Download</a></p>
                 </div>
               </div>
             </div>
@@ -986,12 +985,25 @@
                   <span class="text-primary icon-business_center"></span>
                 </div>
                 <div>
-                  <h3>Statuten & Beleidsplan</h3>
+                  <h3>Statuten pre 2024</h3>
                   <p>
-                    Download hieronder de statuten & het beleidsplan van
-                    Stichting Poezenbende
+                    Download hieronder de statuten van Stichting Poezenbende
                   </p>
-                  <p><a href="finances/Beleidsplan.pdf">Download</a></p>
+                  <p><a href="finances/Statuten.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Beleidsplan 2020 - 2040</h3>
+                  <p>
+                    Download hieronder het beleidsplan van Stichting Poezenbende
+                  </p>
+                  <p><a href="finances/Beleidsplan2020.pdf">Download</a></p>
                 </div>
               </div>
             </div>
