--- a/index.html
+++ b/index.html
@@ -785,6 +785,18 @@
                   <span class="text-primary icon-business_center"></span>
                 </div>
                 <div>
+                  <h3>Jaarverslag 2024</h3>
+                  <p>Download hieronder het jaarverslag van 2024</p>
+                  <p><a href="finances/Jaarverslag2024.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
                   <h3>Jaarverslag 2023</h3>
                   <p>Download hieronder het jaarverslag van 2023</p>
                   <p><a href="finances/Jaarverslag2023.pdf">Download</a></p>
@@ -836,6 +848,20 @@
                   <h3>Jaarverslag 2019</h3>
                   <p>Download hieronder het jaarverslag van 2019</p>
                   <p><a href="finances/Jaarverslag2019.pdf">Download</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4 d-flex">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary icon-business_center"></span>
+                </div>
+                <div>
+                  <h3>Financieel Overzicht 2024</h3>
+                  <p>Download hieronder het financieel overzicht van 2024</p>
+                  <p>
+                    <a href="finances/FinancieelOverzicht2024.pdf">Download</a>
+                  </p>
                 </div>
               </div>
             </div>
