Fix mailto and phone number

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-6">
               <p class="mb-0 float-right">
                 <span class="mr-3"
-                  ><a href="tel://#">
+                  ><a href="tel://+31627407553">
                     <span class="icon-phone mr-2"></span
                     ><span class="d-none d-lg-inline-block"
                       >06 274 075 53</span
@@ -74,7 +74,7 @@
                   ></span
                 >
                 <span
-                  ><a href="#"
+                  ><a href="mailto:nathalie@stichtingpoezenbende.nl"
                     ><span class="icon-envelope mr-2"></span
                     ><span class="d-none d-lg-inline-block"
                       >Nathalie@StichtingPoezenbende.nl</span
